src/css/components/User.scss
.User {
    display: flex;
    flex-direction: row;

    width: 90%;
    height: 58px;
    justify-content: space-between;
    align-items: center;
}

.User_Image {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    align-self: center;
}

.User_Info {
    display: flex;
    flex-direction: column;

    .User_Listening {
        margin: 0;
        font-size: 12px;
        line-height: 18px;
        color: var(--text-secondary-color);
    }
}

.User_Name {
    &:nth-child(1) {
        color: var(--text-primary-color);
    }

    &:nth-child(2) {
        color: var(--text-secondary-color);
    }
}

.User_Listen {
    width: 33px;
    height: 33px;
    align-self: center;
    transition: all 0.1s ease-in-out;

    &:hover {
        scale: 1.2;
        cursor: pointer;
    }
}

.User_RecentTime {
    margin: 0;
    font-size: 12px;
    color: var(--text-secondary-color);
}

